# whysper

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  dev-clean.tar.gz.1  flake.nix  get_dataset.nu  justfile  stats.md  vocabulary.json
nix/modules/: devshell.nix  rust.nix  template.nix
src/: main.rs  main.rs.back  main.rs.noctc
