[package]
authors = ["Mc.Lover <what-are-you-doing-with-your-life@yata-yata.lol>"]
edition = "2024"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "whysper"
description = "A simple Rust project using Nix"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.17", features = ["ndarray", "train", "wgpu"] }
cpal = "0.15"
hound = "3.5"
rustfft = "6.2"
claxon = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# No ctc
# burn = { version = "0.17", features = ["ndarray", "train"] }
# cpal = "0.15"
# hound = "3.5"
# rustfft = "6.2"
# claxon = "0.4"  # Added for FLAC support
# rand = "0.8"
# 
# burn = { version = "0.17", features = ["wgpu", "train", "fusion"] }
# burn = { version = "0.17", features = ["wgpu"] }
# hound = "3.4"
# ndarray = "0.15"
# bincode = "=1.3.3"  # Exact version to override transitive deps
# burn = { version = "0.17.1", features = ["wgpu", "ndarray"] }
# burn-ndarray = "0.17"
# hound = "3.4"
# ndarray = "0.15"
# rustfft = "6.1"
